Sun Nov 22 16:37:10 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_peephole_optimize): eliminate always/never
	  branches after a literal object and when the value is used after
	  the branch.

Sun Nov 22 01:23:43 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* configure.in: Add -D_XOPEN_SOURCE=500 (or 600 or 700) on Solaris
	  if available, mainly for enabling some features in sockets.

Sun Nov 22 00:17:22 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* test/socket/test_socket.rb (test/socket/test_socket.rb): skip
	  the test when Socket::SO_TIMESTAMP is not defined. Fix error
	  on Solaris 10. [Bug #11728] [ruby-dev:49377]

Sat Nov 21 18:57:28 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (need_argument): move frozen-string-literal-debug option
	  from --enable to --debug.  [Feature #11725]

	* ruby.c (proc_options): fix pointer overrun. do not advance argv
	  until it is valid.

Sat Nov 21 13:59:09 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/digest/sha1/extconf.rb: OpenSSL's struct name for SHA1 is
	  SHA_CTX. http://openssl.org/docs/man0.9.8/crypto/SHA1.html

Sat Nov 21 13:31:52 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/digest/*/*.[ch]: include ruby.h before digest.h to avoid
	  including ext/digest/extconf.h. [Bug #3231]
	  https://msdn.microsoft.com/library/36k2cdd4.aspx

	* ext/digest/*/extconf.rb: remove ext/digest from include search path
	  to avoid confusion of cl.exe.

	* ext/digest/*/*.[ch]: explicitly specify def.h's path.

Sat Nov 21 13:05:16 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl.h: LibreSSL doesn't have and need e_os2.h.

Sat Nov 21 09:18:10 2015  Koichi Sasada  <ko1@atdot.net>

	* thread_sync.c: reduce the specification of Queue#close.
	  * Queue#close accepts no arguments.
	  * deq'ing on closed queue returns nil, always.
	  [Feature #10600]

	* test/thread/test_queue.rb: catch up this fix.

Sat Nov 21 08:44:21 2015  Koichi Sasada  <ko1@atdot.net>
